@@ -7,6 +7,7 @@ copy_dlls_to_build_folders ()
 
 set ( SOURCES
 	"${CMAKE_CURRENT_SOURCE_DIR}/src/App.cpp"
+	"${CMAKE_CURRENT_SOURCE_DIR}/src/Buffer.cpp"
 	"${CMAKE_CURRENT_SOURCE_DIR}/src/Camera.cpp"
 	"${CMAKE_CURRENT_SOURCE_DIR}/src/Clip.cpp"
 	"${CMAKE_CURRENT_SOURCE_DIR}/src/Collision.cpp"
