@@ -1,5 +1,7 @@
 dgm-lib vX.X.X
  * Changed dgm::Animation::setSpeed/getSpeed to work with unsigned numbers
+ * Updated dgm::Buffer interface with nodiscard, const and noexcept specifiers
+ * Fixed a bug where resizing dgm::Buffer after initialization would not update capacity value
 
 dgm-lib v1.1.1
  * Added dgm::ps::Particle::despawn method
